@@ -26,9 +26,9 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
     compile 'org.apache.logging.log4j:log4j-api:2.17.1'
     compile 'org.apache.logging.log4j:log4j-core:2.17.1'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.9.0.0'
-    compile 'org.springframework:spring-beans:5.3.3'
-    compile 'org.springframework:spring-jdbc:5.3.3'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.10.0.0'
+    compile 'org.springframework:spring-beans:5.3.4'
+    compile 'org.springframework:spring-jdbc:5.3.4'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
